--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,29 +1,46 @@
 Package: SpidermiR
 Type: Package
-Title: SpidermiR: An R/Bioconductor package for integrative network
-        analysis with miRNA data
-Version: 0.99.3
+Title: SpidermiR: An R/Bioconductor package for integrative network analysis
+    with miRNA data
+Version: 0.99.4
 Date: 31-03-2015
-Author: Claudia Cava, Antonio Colaprico, Alex Graudenzi, Gloria
-        Bertoli, Tiago C. Silva, Catharina Olsen, Houtan Noushmehr,
-        Gianluca Bontempi, Giancarlo Mauri, Isabella Castiglioni
+Author: Claudia Cava,
+    Antonio Colaprico,
+    Alex Graudenzi,
+    Gloria Bertoli,
+	Tiago C. Silva,
+	Catharina Olsen,
+	Houtan Noushmehr,
+    Gianluca Bontempi,
+    Giancarlo Mauri,
+    Isabella Castiglioni
 Maintainer: Claudia Cava <claudia.cava@ibfm.cnr.it>
-Depends: R (>= 3.2.4)
-Imports: networkD3, httr, igraph, utils, stats
-Description: The aims of SpidermiR are : i) facilitate the network
-        open-access data retrieval from GeneMania data, ii) prepare the
-        data using the appropriate gene nomenclature, iii) integration
-        of miRNA data in a specific network, iv) provide different
-        standard analyses and v) allow the user to visualize the
-        results. In more detail, the package provides multiple methods
-        for query, prepare and download network data (GeneMania), and
-        the integration with miRNA data (mirWalk, miR2Disease,
-        miRandola) and the use of standard analysis (igraph) and
-        visualization methods (networkD3).
+Depends:
+    R (>= 3.0.0)
+Imports:
+    networkD3,
+    httr,
+    igraph,
+    utils,
+	stats
+Description: The aims of SpidermiR are : i) facilitate the network open-access
+    data retrieval from GeneMania data, ii) prepare the data using the appropriate gene nomenclature,
+    iii) integration of miRNA data in a specific network, iv) provide different
+    standard analyses and v) allow the user to visualize the results. In more
+    detail, the package provides multiple methods for query, prepare and download
+    network data (GeneMania), and the integration with miRNA data (mirWalk, miR2Disease,miRTar, miRandola) and the use of standard
+    analysis (igraph) and visualization methods (networkD3).
 License: GPL (>= 3)
-biocViews: GeneRegulation, GeneExpression, Network
-Suggests: BiocStyle, knitr, rmarkdown, testthat, devtools, roxygen2
+biocViews: GeneRegulation,
+    GeneExpression,
+    Network
+Suggests:
+    BiocStyle,
+    knitr,
+    rmarkdown,
+    testthat,
+	devtools,
+	roxygen2
 VignetteBuilder: knitr
 LazyData: true
 RoxygenNote: 5.0.1
-NeedsCompilation: no
