--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,14 +3,17 @@
 export(SpidermiRanalyze_Community_detection)
 export(SpidermiRanalyze_Community_detection_bi)
 export(SpidermiRanalyze_Community_detection_net)
+export(SpidermiRanalyze_Community_detection_subnet)
 export(SpidermiRanalyze_degree_centrality)
 export(SpidermiRanalyze_direct_net)
 export(SpidermiRanalyze_direct_subnetwork)
 export(SpidermiRanalyze_mirna_extra_cir)
 export(SpidermiRanalyze_mirna_gene_complnet)
 export(SpidermiRanalyze_mirna_network)
+export(SpidermiRanalyze_mirnanet_pharm)
 export(SpidermiRanalyze_subnetwork_neigh)
 export(SpidermiRdownload_net)
+export(SpidermiRdownload_pharmacomir)
 export(SpidermiRprepare_NET)
 export(SpidermiRquery_disease)
 export(SpidermiRquery_networks_type)
