--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(SpidermiRanalyze_mirna_gene_complnet)
 export(SpidermiRanalyze_mirna_network)
 export(SpidermiRanalyze_mirnanet_pharm)
 export(SpidermiRanalyze_subnetwork_neigh)
+export(SpidermiRdownload_miRNAprediction)
 export(SpidermiRdownload_net)
 export(SpidermiRdownload_pharmacomir)
 export(SpidermiRprepare_NET)
@@ -20,8 +21,12 @@ export(SpidermiRquery_spec_networks)
 export(SpidermiRquery_species)
 export(SpidermiRvisualize_BI)
 export(SpidermiRvisualize_mirnanet)
+import(miRNAtap.db)
+import(org.Hs.eg.db)
 import(stats)
 import(utils)
+importFrom(AnnotationDbi,as.list)
+importFrom(AnnotationDbi,mappedkeys)
 importFrom(httr,GET)
 importFrom(httr,content)
 importFrom(httr,stop_for_status)
@@ -40,6 +45,8 @@ importFrom(igraph,leading.eigenvector.community)
 importFrom(igraph,modularity)
 importFrom(igraph,spinglass.community)
 importFrom(igraph,walktrap.community)
+importFrom(miRNAtap,getPredictedTargets)
 importFrom(networkD3,JS)
 importFrom(networkD3,forceNetwork)
 importFrom(networkD3,simpleNetwork)
+importFrom(org.Hs.eg.db,org.Hs.egSYMBOL2EG)
