adding SpidermiRvisualize_plot_target
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SpidermiR@117301 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,12 +21,20 @@ export(SpidermiRquery_spec_networks)
 export(SpidermiRquery_species)
 export(SpidermiRvisualize_BI)
 export(SpidermiRvisualize_mirnanet)
+export(SpidermiRvisualize_plot_target)
 import(miRNAtap.db)
 import(org.Hs.eg.db)
 import(stats)
 import(utils)
 importFrom(AnnotationDbi,as.list)
 importFrom(AnnotationDbi,mappedkeys)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,coord_flip)
+importFrom(ggplot2,element_text)
+importFrom(ggplot2,geom_bar)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,theme)
+importFrom(gridExtra,grid.arrange)
 importFrom(httr,GET)
 importFrom(httr,content)
 importFrom(httr,stop_for_status)
