--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(SpidermiRanalyze_mirna_network)
 export(SpidermiRanalyze_mirnanet_pharm)
 export(SpidermiRanalyze_subnetwork_neigh)
 export(SpidermiRdownload_miRNAprediction)
+export(SpidermiRdownload_miRNAvalidate)
 export(SpidermiRdownload_net)
 export(SpidermiRdownload_pharmacomir)
 export(SpidermiRprepare_NET)
