--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(SpidermiRanalyze_Community_detection)
 export(SpidermiRanalyze_Community_detection_bi)
 export(SpidermiRanalyze_Community_detection_net)
+export(SpidermiRanalyze_DEnetworkTCGA)
 export(SpidermiRanalyze_degree_centrality)
 export(SpidermiRanalyze_direct_net)
 export(SpidermiRanalyze_direct_subnetwork)
@@ -11,6 +12,7 @@ export(SpidermiRanalyze_mirna_gene_complnet)
 export(SpidermiRanalyze_mirna_network)
 export(SpidermiRanalyze_mirnanet_pharm)
 export(SpidermiRanalyze_subnetwork_neigh)
+export(SpidermiRdownload_miRNAextra_cir)
 export(SpidermiRdownload_miRNAprediction)
 export(SpidermiRdownload_miRNAvalidate)
 export(SpidermiRdownload_net)
@@ -20,7 +22,10 @@ export(SpidermiRquery_disease)
 export(SpidermiRquery_networks_type)
 export(SpidermiRquery_spec_networks)
 export(SpidermiRquery_species)
+export(SpidermiRvisualize_3Dbarplot)
 export(SpidermiRvisualize_BI)
+export(SpidermiRvisualize_adj_matrix)
+export(SpidermiRvisualize_degree_dist)
 export(SpidermiRvisualize_mirnanet)
 export(SpidermiRvisualize_plot_target)
 import(miRNAtap.db)
@@ -29,23 +34,37 @@ import(stats)
 import(utils)
 importFrom(AnnotationDbi,as.list)
 importFrom(AnnotationDbi,mappedkeys)
+importFrom(TCGAbiolinks,TCGAanalyze_DEA)
+importFrom(TCGAbiolinks,TCGAanalyze_Filtering)
+importFrom(TCGAbiolinks,TCGAanalyze_Normalization)
+importFrom(TCGAbiolinks,TCGAanalyze_Preprocessing)
+importFrom(TCGAbiolinks,TCGAdownload)
+importFrom(TCGAbiolinks,TCGAprepare)
+importFrom(TCGAbiolinks,TCGAquery)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_flip)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,theme)
+importFrom(gplots,heatmap.2)
+importFrom(grDevices,colorRampPalette)
 importFrom(gridExtra,grid.arrange)
 importFrom(httr,GET)
 importFrom(httr,content)
 importFrom(httr,stop_for_status)
+importFrom(igraph,"E<-")
+importFrom(igraph,E)
 importFrom(igraph,V)
+importFrom(igraph,as_adjacency_matrix)
 importFrom(igraph,clusters)
 importFrom(igraph,decompose.graph)
+importFrom(igraph,degree.distribution)
 importFrom(igraph,delete.edges)
 importFrom(igraph,ecount)
 importFrom(igraph,edge.betweenness.community)
 importFrom(igraph,fastgreedy.community)
+importFrom(igraph,get.adjacency)
 importFrom(igraph,get.data.frame)
 importFrom(igraph,graph.data.frame)
 importFrom(igraph,induced.subgraph)
@@ -54,8 +73,11 @@ importFrom(igraph,leading.eigenvector.community)
 importFrom(igraph,modularity)
 importFrom(igraph,spinglass.community)
 importFrom(igraph,walktrap.community)
+importFrom(lattice,cloud)
+importFrom(latticeExtra,panel.3dbars)
 importFrom(miRNAtap,getPredictedTargets)
 importFrom(networkD3,JS)
 importFrom(networkD3,forceNetwork)
 importFrom(networkD3,simpleNetwork)
 importFrom(org.Hs.eg.db,org.Hs.egSYMBOL2EG)
+importFrom(stats,runif)
