--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(SpidermiRvisualize_3Dbarplot)
 export(SpidermiRvisualize_BI)
 export(SpidermiRvisualize_adj_matrix)
 export(SpidermiRvisualize_degree_dist)
+export(SpidermiRvisualize_direction)
 export(SpidermiRvisualize_mirnanet)
 export(SpidermiRvisualize_plot_target)
 import(miRNAtap.db)
@@ -34,13 +35,13 @@ import(stats)
 import(utils)
 importFrom(AnnotationDbi,as.list)
 importFrom(AnnotationDbi,mappedkeys)
+importFrom(TCGAbiolinks,GDCdownload)
+importFrom(TCGAbiolinks,GDCprepare)
+importFrom(TCGAbiolinks,GDCquery)
 importFrom(TCGAbiolinks,TCGAanalyze_DEA)
 importFrom(TCGAbiolinks,TCGAanalyze_Filtering)
 importFrom(TCGAbiolinks,TCGAanalyze_Normalization)
 importFrom(TCGAbiolinks,TCGAanalyze_Preprocessing)
-importFrom(TCGAbiolinks,TCGAdownload)
-importFrom(TCGAbiolinks,TCGAprepare)
-importFrom(TCGAbiolinks,TCGAquery)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_flip)
 importFrom(ggplot2,element_text)
@@ -81,3 +82,7 @@ importFrom(networkD3,forceNetwork)
 importFrom(networkD3,simpleNetwork)
 importFrom(org.Hs.eg.db,org.Hs.egSYMBOL2EG)
 importFrom(stats,runif)
+importFrom(visNetwork,"%>%")
+importFrom(visNetwork,visInteraction)
+importFrom(visNetwork,visLegend)
+importFrom(visNetwork,visNetwork)
